typescript/checker/tests/conformance/es6/for-ofStatements/for-of3.ts.stderr
error: TS2406
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of3.ts:3:6
  |
3 | for (v++ of []) { }
  |      ^^^

